Added few more examples

--- a/index.html
+++ b/index.html
@@ -99,6 +99,25 @@
     		</ul>
     	</nav>
 
+    	<h1 class = "title is-3">Tabs</h1>
+    	<div class="tabs">
+		  <ul>
+		    <li><a>Pictures</a></li>
+		    <li class = "is-active"><a>Music</a></li>
+		    <li><a>Videos</a></li>
+		    <li><a>Documents</a></li>
+		  </ul>
+		</div>
+		<h1 class = "title is-3">Tabs (centered)</h1>
+		<div class="tabs is-centered">
+		  <ul>
+		    <li><a>Pictures</a></li>
+		    <li class = "is-active"><a>Music</a></li>
+		    <li><a>Videos</a></li>
+		    <li><a>Documents</a></li>
+		  </ul>
+		</div>
+
         <h1 class = "title is-3">Messages</h1>
         <section class="columns">
             <div class="column">
@@ -162,7 +181,7 @@
 		      A <strong>bulma</strong> footer example, <a href="#">some link here</a>.
 		    </p>
 		  </div>
-		</footer>
+	</footer>
 </body>
 
 </html>
